--- a/views/data.hbs
+++ b/views/data.hbs
@@ -70,6 +70,7 @@
         <h2 class="headline">Biomedical Records</h2>
         <table class="data-log">
             <thead>
+                <tr><b>Total:</b> {{biomedicalCount}}</tr>
                 <tr>
                     <th>Gender</th>
                     <th>Location</th>
@@ -115,6 +116,7 @@
         <h2 class="headline">Nonbiomedical Records</h2>
         <table class="data-log">
             <thead>
+                <tr><b>Total:</b> {{nonBiomedicalCount}}</tr>
                 <tr>
                     <th>Gender</th>
                     <th>Stigma</th>
