--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -177,7 +177,7 @@
                             <option value="Positive-partner">HIV positive partner</option>
                             <option value="Rape">Non consensual sex and rape</option>
                             <option value="Bloodtransfusion">History of bloodtransfusion or exposure to contaminated equipment</option>
-                            <option value="Hcw">Occupational hazard health care worker (HCW)</option>
+                            <option value="HCW">Occupational hazard health care worker (HCW)</option>
                             <option value="Administrative">Administrative reason</option>
                             <option value="History">Subjective ill health or history of sexually transmitted infection(s)</option>
                             <option value="No reason">No specific reason disclosed</option>
