improved frontend styling and backend implementation

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -100,17 +100,24 @@
         </div>
         <div class="positive">
             <div id="stats">
-                <p class="stats-title"><b>Positive Patients Tested</b></p>
+                <p class="stats-title"><b>Positive Biomedical Patients Tested</b></p>
                 <p class="number">{{statistics.positivePatientsTested}}</p>
             </div>
             <i id="icon-stats" class="bx bxs-user-plus"></i>
         </div>
         <div class="negative">
             <div id="stats">
-                <p class="stats-title"><b>Negative Patients Tested</b></p>
+                <p class="stats-title"><b>Negative Biomedical Patients Tested</b></p>
                 <p class="number">{{statistics.negativePatientsTested}}</p>
             </div>
             <i id="icon-stats" class="bx bxs-user-minus"></i>
+        </div>
+        <div class="nonbiomedical">
+            <div id="stats">
+                <p class="stats-title"><b>Nonbiomedical Patients Tested</b></p>
+                <p class="number">{{statistics.nonbiomedicalPatientsTested}}</p>
+            </div>
+            <i id="icon-stats" class="bx bxs-shield-minus"></i>
         </div>
     </div>
 
