--- a/views/history.hbs
+++ b/views/history.hbs
@@ -94,6 +94,17 @@
                 {{/each}}
             </tbody>
         </table>
+        
+        <!-- pagination for login history -->
+        <div class="pagination">
+            {{#if (gt loginPage 1)}}
+            <a href="/history?loginPage={{decrement loginPage}}" class="pagination-icon">&lt;</a>
+            {{/if}}
+            <span>Page {{loginPage}} of {{loginTotalPages}}</span>
+            {{#if (lt loginPage loginTotalPages)}}
+            <a href="/history?loginPage={{increment loginPage}}" class="pagination-icon">&gt;</a>
+            {{/if}}
+        </div>
     </div>
 
     <div class="container-for-actionhistory">
@@ -120,6 +131,17 @@
                 {{/each}}
             </tbody>
         </table>
+        
+        <!-- pagination for action history -->
+        <div class="pagination">
+            {{#if (gt actionPage 1)}}
+            <a href="/history?actionPage={{decrement actionPage}}" class="pagination-icon">&lt;</a>
+            {{/if}}
+            <span>Page {{actionPage}} of {{actionTotalPages}}</span>
+            {{#if (lt actionPage actionTotalPages)}}
+            <a href="/history?actionPage={{increment actionPage}}" class="pagination-icon">&gt;</a>
+            {{/if}}
+        </div>
     </div>
 
     <div class="footer">
