--- a/public/style.css
+++ b/public/style.css
@@ -413,17 +413,17 @@ select.monthly:hover, .yearly:hover{
 .statistics {
     display: grid;
     grid-template-rows: 200px; 
-    grid-template-columns: repeat(6, 1fr); 
+    grid-template-columns: repeat(8, 1fr); 
     gap: 20px; 
     margin-bottom: 20px;
 }
 
-.total, .positive, .negative{
+.total, .positive, .negative, .nonbiomedical{
     display: flex;
     justify-content: space-around;
     align-items: center;
     border-radius: 5px;
-    padding: 2%;
+    padding: 5%;
 }
 
 .total{
@@ -442,6 +442,12 @@ select.monthly:hover, .yearly:hover{
     background-color: #FFEFEF;
     grid-row: 1 / 1;
     grid-column: 5 / 7;
+}
+
+.nonbiomedical{
+    background-color: #D6EBF2;
+    grid-row: 1 / 1;
+    grid-column: 7 / 9;
 }
 
 .stats-title{
@@ -717,6 +723,7 @@ select.monthly:hover, .yearly:hover{
 }
 
 /** DATA PAGE **/
+
 .container-for-data {
     background-color: #FFECF0;
     border: 2px solid black;
@@ -730,37 +737,66 @@ select.monthly:hover, .yearly:hover{
 .data-log {
     width: 100%;
     border-collapse: collapse;
-    white-space: nowrap; 
+    table-layout: auto;
+    padding: 8px; 
 }
 
 .data-log th,
 .data-log td {
-    padding: 12px 15px;
+    padding: 8px 10px; 
     text-align: left;
     border: 1px solid #ddd;
+    overflow: hidden; 
+    max-width: 120px;
+    font-size: 12px;
 }
 
 .data-log th {
     background-color: #9B112E;
     color: #E2FFED;
     font-weight: bold;
+    font-size: 14px;
+}
+
+.data-log td {
+    text-overflow: ellipsis;
+    font-size: 12px; 
 }
 
 .btn-edit,
 .btn-delete {
     display: inline-block;
     padding: 6px 10px;
-    font-size: 14px;
+    font-size: 12px;
     cursor: pointer;
     text-decoration: none;
     color: #fff;
     border: none;
     border-radius: 4px;
     background-color: black;
-    margin-right: 5px;
 }
 
-/* Modal styling */
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination-icon {
+    margin: 0 10px;
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+}
+
+.pagination span {
+    margin: 0 10px;
+    font-weight: bold;
+}
+
+/** edit patient data record form **/
+
 .modal {
     display: none; 
     position: fixed; 
