finished remember me

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <div class="miniform-group">
-                    <input type="checkbox" id="remember-me" name="remember-me">
+                    <input type="checkbox" id="remember-me" name="remember" value="true">
                     <label class="remember-me">Remember for 30 days</label>
                 </div>
                 <div class="miniform-group">
