--- a/views/history.hbs
+++ b/views/history.hbs
@@ -77,10 +77,10 @@
         <table class="history-log">
             <thead>
                 <tr>
-                    <th>NAME</th>
-                    <th>ROLE</th>
-                    <th>EMAIL ADDRESS</th>
-                    <th>LAST LOGIN DATE/TIME</th>
+                    <th>Name</th>
+                    <th>Role</th>
+                    <th>Email Address</th>
+                    <th>Last Login Date & Time</th>
                 </tr>
             </thead>
             <tbody>
@@ -112,11 +112,11 @@
         <table class="history-log">
             <thead>
                 <tr>
-                    <th>NAME</th>
-                    <th>ROLE</th>
-                    <th>EMAIL ADDRESS</th>
-                    <th>ACTION</th>
-                    <th>ACTION DATE/TIME</th>
+                    <th>Name</th>
+                    <th>Role</th>
+                    <th>Email Address</th>
+                    <th>Action</th>
+                    <th>Action Date & Time</th>
                 </tr>
             </thead>
             <tbody>
