--- a/views/tracker.hbs
+++ b/views/tracker.hbs
@@ -257,7 +257,7 @@
                 
                 <div class="add-record">
                     <input type="button" class="clear-button" value="Clear Form" onclick="clearForm()">
-                    <input type="submit" class="submit-button" value="Submit">
+                    <input type="button" class="submit-button" value="Submit" onclick="validateForm()">
                 </div>
                 
             </div>
