--- a/views/data.hbs
+++ b/views/data.hbs
@@ -59,7 +59,7 @@
     </ul>
 
     <div class="user">
-        <img src="./gabay-logo.jpeg" alt="gabay org" class="user-img">
+        <img src="{{user.icon}}" alt="gabay org" class="user-img">
         <div class="div">
             <p class="bold">{{user.name}}</p>
             <p>{{user.role}}</p>
