--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -59,7 +59,7 @@
     </ul>
 
     <div class="user">
-        <img src="./gabay-logo.jpeg" alt="gabay org" class="user-img">
+        <img src="{{user.userIcon}}" alt="gabay org" class="user-img">
         <div class="div">
             <p class="bold">{{user.name}}</p>
             <p>{{user.role}}</p>
@@ -76,7 +76,7 @@
     <div class="container-for-profile">
         <div class="container-for-organization">
             <div class="side-logo">
-                <img src="./gabay-logo.jpeg" alt="gabay org" class="side-logo">
+                <img src="{{user.userIcon}}" alt="gabay org" class="side-logo">
             </div>
             <div class="container-for-information">
                 <div class="information">
