--- a/public/style.css
+++ b/public/style.css
@@ -696,7 +696,7 @@ select.monthly:hover, .yearly:hover{
     margin-left: 1220px;
     background-color: #9B112E; 
     color: white;
-    border: 3px solid white; 
+    border: 3px solid #9B112E; 
     padding: 10px 20px; 
     display: inline-block;
     font-size: 16px;
